# Brainpile

./: .gitignore  README.md  docker-compose.yml
clip/: Dockerfile  main.py  requirements.txt
core/: Cargo.toml  Dockerfile
core/migrations/: 20260109000000_init.sql  20260110000000_entities.sql  20260111000000_tag_assets.sql
core/src/: api.rs  bot.rs  config.rs  db.rs  lib.rs  main.rs  state.rs  worker.rs
frontend/: Caddyfile  Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api.ts  groupItems.ts  index.css  itemList.ts
frontend/src/components/: ConfirmModal.css  ConfirmModal.tsx  Header.tsx  ItemCard.css  ItemCard.tsx  ItemModal.css  ItemModal.tsx  Layout.tsx  MasonryGrid.tsx  Sidebar.css  Sidebar.tsx  TagIcon.tsx
frontend/src/pages/: EntitiesPage.tsx  RandomPage.tsx  TagsPage.tsx  TimelinePage.tsx
